// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`initialAppOwner should use provided owner 1`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "title",
          "isCompleted",
          "categoryId",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todo",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todoCategory",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              173,
              165,
              204,
              225,
              74,
              240,
              76,
              99,
              46,
              18,
              104,
              4,
              0,
              136,
              188,
              132,
              99,
              57,
              151,
              4,
              147,
              44,
              59,
              91,
              61,
              162,
              116,
              243,
              186,
              98,
              25,
              4,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
          "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
          "appOwnerWriteKey": {
            "data": [
              111,
              64,
              118,
              108,
              245,
              65,
              176,
              98,
              173,
              247,
              85,
              78,
              30,
              167,
              192,
              203,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.000Z-0000-dea8e2c5a2d7f4c3",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [],
    },
    {
      "name": "todo",
      "rows": [],
    },
    {
      "name": "todoCategory",
      "rows": [],
    },
    {
      "name": "evolu_timestamp",
      "rows": [],
    },
  ],
}
`;

exports[`onInit callback should be called with correct parameters and can seed initial data 1`] = `
{
  "schema": {
    "indexes": [
      {
        "name": "evolu_history_ownerId_timestamp",
        "sql": "create index evolu_history_ownerId_timestamp on evolu_history (
          "ownerId",
          "timestamp"
        )",
      },
      {
        "name": "evolu_history_ownerId_table_id_column_timestampDesc",
        "sql": "create unique index evolu_history_ownerId_table_id_column_timestampDesc on evolu_history (
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp" desc
        )",
      },
      {
        "name": "evolu_timestamp_index",
        "sql": "create index evolu_timestamp_index on evolu_timestamp (
        "ownerId",
        "l",
        "t",
        "h1",
        "h2",
        "c"
      )",
      },
    ],
    "tables": [
      {
        "columns": [
          "protocolVersion",
        ],
        "name": "evolu_version",
      },
      {
        "columns": [
          "clock",
          "appOwnerId",
          "appOwnerEncryptionKey",
          "appOwnerWriteKey",
          "appOwnerMnemonic",
        ],
        "name": "evolu_config",
      },
      {
        "columns": [
          "ownerId",
          "table",
          "id",
          "column",
          "timestamp",
          "value",
        ],
        "name": "evolu_history",
      },
      {
        "columns": [
          "id",
          "title",
          "isCompleted",
          "categoryId",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todo",
      },
      {
        "columns": [
          "id",
          "name",
          "createdAt",
          "updatedAt",
          "isDeleted",
        ],
        "name": "todoCategory",
      },
      {
        "columns": [
          "ownerId",
          "t",
          "h1",
          "h2",
          "c",
          "l",
        ],
        "name": "evolu_timestamp",
      },
    ],
  },
  "tables": [
    {
      "name": "evolu_version",
      "rows": [
        {
          "protocolVersion": 0,
        },
      ],
    },
    {
      "name": "evolu_config",
      "rows": [
        {
          "appOwnerEncryptionKey": {
            "data": [
              173,
              165,
              204,
              225,
              74,
              240,
              76,
              99,
              46,
              18,
              104,
              4,
              0,
              136,
              188,
              132,
              99,
              57,
              151,
              4,
              147,
              44,
              59,
              91,
              61,
              162,
              116,
              243,
              186,
              98,
              25,
              4,
            ],
            "type": "Buffer",
          },
          "appOwnerId": "MdVYFAxShUluuZKVWQfYL",
          "appOwnerMnemonic": "knee easy fork attitude drink gloom head latin spider grab spy reason",
          "appOwnerWriteKey": {
            "data": [
              111,
              64,
              118,
              108,
              245,
              65,
              176,
              98,
              173,
              247,
              85,
              78,
              30,
              167,
              192,
              203,
            ],
            "type": "Buffer",
          },
          "clock": "1970-01-01T00:00:00.011Z-0001-79bdc6f641541756",
        },
      ],
    },
    {
      "name": "evolu_history",
      "rows": [
        {
          "column": "name",
          "id": {
            "data": [
              45,
              57,
              23,
              185,
              183,
              25,
              242,
              209,
              61,
              55,
              167,
              255,
              131,
              135,
              18,
              120,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "table": "todoCategory",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              0,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
          "value": "Not Urgent",
        },
        {
          "column": "createdAt",
          "id": {
            "data": [
              45,
              57,
              23,
              185,
              183,
              25,
              242,
              209,
              61,
              55,
              167,
              255,
              131,
              135,
              18,
              120,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "table": "todoCategory",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              0,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
          "value": "1970-01-01T00:00:00.009Z",
        },
        {
          "column": "title",
          "id": {
            "data": [
              82,
              251,
              255,
              80,
              65,
              47,
              92,
              248,
              204,
              101,
              188,
              59,
              0,
              238,
              77,
              140,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "table": "todo",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
          "value": "Try React Suspense",
        },
        {
          "column": "categoryId",
          "id": {
            "data": [
              82,
              251,
              255,
              80,
              65,
              47,
              92,
              248,
              204,
              101,
              188,
              59,
              0,
              238,
              77,
              140,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "table": "todo",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
          "value": "TXBxQKVArGni9yYtMvVPR",
        },
        {
          "column": "createdAt",
          "id": {
            "data": [
              82,
              251,
              255,
              80,
              65,
              47,
              92,
              248,
              204,
              101,
              188,
              59,
              0,
              238,
              77,
              140,
            ],
            "type": "Buffer",
          },
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "table": "todo",
          "timestamp": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
          "value": "1970-01-01T00:00:00.009Z",
        },
      ],
    },
    {
      "name": "todo",
      "rows": [
        {
          "categoryId": "TXBxQKVArGni9yYtMvVPR",
          "createdAt": "1970-01-01T00:00:00.009Z",
          "id": "7ZZt7nnZx3D1AKbzu8w9D",
          "isCompleted": null,
          "isDeleted": null,
          "title": "Try React Suspense",
          "updatedAt": "1970-01-01T00:00:00.011Z",
        },
      ],
    },
    {
      "name": "todoCategory",
      "rows": [
        {
          "createdAt": "1970-01-01T00:00:00.009Z",
          "id": "TXBxQKVArGni9yYtMvVPR",
          "isDeleted": null,
          "name": "Not Urgent",
          "updatedAt": "1970-01-01T00:00:00.011Z",
        },
      ],
    },
    {
      "name": "evolu_timestamp",
      "rows": [
        {
          "c": 1,
          "h1": 275690730879081,
          "h2": 112511489795540,
          "l": 2,
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "t": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              0,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
        },
        {
          "c": 1,
          "h1": 103802921224654,
          "h2": 6929174574082,
          "l": 1,
          "ownerId": {
            "data": [
              128,
              87,
              31,
              173,
              149,
              230,
              206,
              93,
              128,
              2,
              246,
              220,
              162,
              236,
              95,
              168,
            ],
            "type": "Buffer",
          },
          "t": {
            "data": [
              0,
              0,
              0,
              0,
              0,
              11,
              0,
              1,
              121,
              189,
              198,
              246,
              65,
              84,
              23,
              86,
            ],
            "type": "Buffer",
          },
        },
      ],
    },
  ],
}
`;
